<resources>
    <string name="app_name">NAVIO</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_map">Map</string>
    <string name="title_messages">Messages</string>
    <string name="title_account">Account</string>
    <string name="powered_by_threesmart">Powered by ThreeSmart</string>
    <string name="hello_welcome_to_navio">Hello!\nWelcome to navIO</string>
    <string name="if_you_are_">If you are a new employee please \n contact your manager</string>
    <string name="lets_start">Let\'s start!</string>
    <string name="sign_in">Sign In</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="dont_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="local_lets_start">LETS_START</string>
    <string name="local_executed">executed</string>
    <string name="local_authentication">Authentication</string>
    <string name="local_jwt">JWT</string>
    <string name="log_out">Log out</string>
    <string name="back_arrow"><![CDATA[<]]></string>
    <string name="password_reset">Password reset</string>
    <string name="Email">Email</string>
    <string name="email">email</string>
    <string name="send">Send</string>
    <string name="sending_an_email">Sending an email</string>
    <string name="name">name</string>
    <string name="surname">surname</string>
    <string name="username">username</string>
    <string name="department_id_x">Department ID: x</string>
    <string name="Welcome">Welcome,</string>
    <string name="name_surname">Name Surname</string>
    <string name="NavIO">NavIO</string>
    <string name="title_activity_profile_activty">ProfileActivty</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_test">test</string>
    <string name="how_can_we_help_you">How can we help you?</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="Surname">Surname</string>
    <string name="Name">Name</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="Date_of_birth">Date of birth</string>
    <string name="Phone_Number">Phone number</string>
    <string name="Gender">Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Update_profile">Update profile</string>
    <string name="Employee_ID">Employee ID</string>
    <string name="No_pending_tasks">No pending tasks</string>
    <string name="xx_xx_xxxx">xx/xx/xxxx</string>
</resources>