<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_extra_light"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="-2sp"
        android:text="@string/sign_in"
        android:textAppearance="@style/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="171dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ts_new_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/login_input"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:text="raf"
        android:textColor="@color/login_hint_color"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_input"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:text="davul"
        app:layout_constraintEnd_toEndOf="@+id/usernameInput"
        app:layout_constraintStart_toStartOf="@+id/usernameInput"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput"
        tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="135dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppins_extra_light"
        android:gravity="center_vertical"
        android:lineSpacingExtra="2sp"
        android:text="@string/forgot_pass"
        android:textAppearance="@style/forgot_pass"
        app:layout_constraintStart_toStartOf="@+id/passwordInput"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/login_button"
        android:drawableEnd="@drawable/login_icon"
        android:fontFamily="@font/audiowide_regular"
        android:paddingStart="32dp"
        android:paddingEnd="38dp"
        android:text="@string/log_in"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/passwordInput"
        app:layout_constraintStart_toStartOf="@+id/passwordInput"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pass"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button">

        <TextView
            android:id="@+id/dont_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_extra_light"
            android:gravity="center_horizontal|center_vertical"
            android:lineSpacingExtra="-2sp"
            android:text="@string/dont_have_an_account"
            android:textAppearance="@style/dont_have_an_account"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_extra_light"
            android:gravity="center_horizontal|center_vertical"
            android:lineSpacingExtra="-2sp"
            android:paddingStart="5sp"
            android:text="@string/sign_up"
            android:textAppearance="@style/sign_up"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>