<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.lets_start.LetsStartActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/lets_start_background"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/powered_by_"
        android:layout_width="180dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/audiowide_regular"
        android:gravity="center_horizontal|top"
        android:text="@string/powered_by_threesmart"
        android:textAppearance="@style/powered_by_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/hello_welco"
        android:layout_width="283dp"
        android:layout_height="159dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/audiowide_regular"
        android:gravity="center_horizontal|top"
        android:scaleType="centerCrop"
        android:text="@string/hello_welcome_to_navio"
        android:textAppearance="@style/hello_welcome_text"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/if_you_are_"
        android:layout_width="373dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/audiowide_regular"
        android:gravity="center_horizontal|top"
        android:scaleType="centerCrop"
        android:text="@string/if_you_are_"
        android:textAppearance="@style/if_you_are_"
        app:layout_constraintBottom_toTopOf="@+id/lets_start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/lets_start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:background="@drawable/lets_start_button"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/audiowide_regular"
        android:text="@string/lets_start"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>