<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.forgot_pass.ForgotPasswordActivity">

    <EditText
        android:id="@+id/input_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_input"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textColor="@color/login_hint_color"
        app:layout_constraintEnd_toEndOf="@+id/Password_reset"
        app:layout_constraintStart_toStartOf="@+id/Password_reset"
        app:layout_constraintTop_toBottomOf="@+id/Password_reset"
        tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/back_arrow_layout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/back_arrow_margin_top"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/back_arrow"
            android:clickable="true"
            android:contentDescription="@string/back_arrow"
            android:focusable="true"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:src="@drawable/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_arrow_layout" />

    <TextView
        android:id="@+id/Password_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_extra_light"
        android:text="@string/password_reset"
        android:textColor="@color/ts_color"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/send_email_button"
        android:layout_width="198dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_background"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/input_email"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="@+id/input_email"
        app:layout_constraintTop_toBottomOf="@+id/input_email"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>